testdata/baselines/reference/submodule/conformance/assignmentToVoidZero1.errors.txt
assignmentToVoidZero1.js(2,13): error TS6425: Nested CommonJS export constructs cannot be serialized for declaration emit.


==== assignmentToVoidZero1.js (1 errors) ====
    // #38552
    exports.y = exports.x = void 0;
                ~~~~~~~~~~~~~~~~~~
!!! error TS6425: Nested CommonJS export constructs cannot be serialized for declaration emit.
    exports.x = 1;
    exports.y = 2;
    